add channel id in consltant profile
